fix: fix for ata and parser, endpoint added, swagger updated
